--- a/docs/Simulacrums/.simulacrum_template.md
+++ b/docs/Simulacrums/.simulacrum_template.md
@@ -49,7 +49,7 @@ hide:
 
 ???+ example "Efectos"
 
-    ![!arma](/images/weapons/!armaimagen.webp){ #arma-imagen width="300", align=right}
+    ![!arma](/images/weapons/!armaimagen.webp){ #arma width="300", align=right}
 
     !Pasivas
 
@@ -71,22 +71,24 @@ hide:
 ### Habilidades
 
 === "ATQ Normal"
-    !!! example ""
+    ???+ example ""
 
         uwu
 
-=== "Evasion"
-    !!! example ""
+=== "Evasión"
+    ???+ example "**Evasión**"
+        ![Evasión](/images/weapons/skills/dodge.webp#only-dark){width="80" align=left}
+        ![Evasión](/images/weapons/skills/dodge.png#only-light){width="80" align=left}
 
-        uwu
+        Evade justo antes de recibir un impacto para activar Phantasia, lo que reduce la velocidad de los objetivos dentro del área. Te vuelves inmune a la conmoción mientras evades.
 
 === "Habilidad"
-    !!! example ""
+    ???+ example ""
 
         uwu
 
 ===+ "Descarga"
-    !!! example ""
+    ???+ example ""
         ![Descarga](/images/weapons/skills/!Simulacrum/discharge.webp#only-dark){width="100" align=left}
         ![Descarga](/images/weapons/skills/!Simulacrum/discharge_light.png#only-light){width="100" align=left}
         ### !Descarga
@@ -106,51 +108,259 @@ hide:
 
 ### Meta
 
-::cards:: cols=3
+!!! quote ""
+    !!! note inline ""
+        <figure markdown>
+        <a href="#arma">![Image title](/images/weapons/Alabaster_Tiger.webp){ width="250" }</a>
+        </figure>
 
-[
- {
-      "title": "!arma",
-      "image": "/images/weapons/!armaimagen.webp",
-      "url": ""
-    },
-    {
-      "title": "",
-      "image": "/images/weapons/!Meta2.webp",
-      "url": ""
-    }, 
-    {
-      "title": "",
-      "image": "/images/weapons/!Meta3.webp",
-      "url": ""
-    }
-]
+        <font size="3">**Tigre de Alabastro**</font>(1)
+        { .annotate }
 
-::/cards::
+        1. 
+            ### **Set de Matrices Recomendadas**
 
-### Triple 
+            === "Ballena"
+    
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Ling_Han.webp){ width="200" }|![Image title](/images/matrix/Ling_Han.webp){ width="200" }|
+                    |![Image title](/images/matrix/Ling_Han.webp){ width="200" }|![Image title](/images/matrix/Ling_Han.webp){ width="200" }|
 
-::cards:: cols=3
+            === "Delfin"
+            
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Samir.webp){ width="200" }|![Image title](/images/matrix/Samir.webp){ width="200" }|
+                    |![Image title](/images/matrix/Scylla.webp){ width="200" }|![Image title](/images/matrix/Scylla.webp){ width="200" }|
 
-[
- {
-      "title": "!arma",
-      "image": "/images/weapons/!armaimagen.webp",
-      "url": ""
-    },
-    {
-      "title": "",
-      "image": "/images/weapons/!Triple2.webp",
-      "url": ""
-    },
-    {
-      "title": "",
-      "image": "/images/weapons/!Triple3.webp",
-      "url": ""
-    }
-]
+                    !!! note "Nota"
+                        En caso de utilizar el set de 4 de Scylla en otra arma, sustituir por Shiro x2 o Crow x2
 
-::/cards::
+            === "F2P"
+            
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Samir.webp){ width="200" }|![Image title](/images/matrix/Samir.webp){ width="200" }|
+                    |![Image title](/images/matrix/Shiro.webp){ width="200" }|![Image title](/images/matrix/Shiro.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        En caso de contar con 60% de critico o más, se puede sustituir el set de Shiro por Crow
+   
+    !!! note inline ""
+
+        <figure markdown>
+        <a href="/Simulacrums/Yu_Lan/#arma">![Image title](/images/weapons/Unity.webp){ width="250" }</a>
+        </figure>
+
+        <font size="3">**Unidad**</font>(1)
+        { .annotate }
+
+        2. 
+            ### **Set de Matrices Recomendadas**
+
+            === "Ballena"
+    
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+
+            === "Delfin"
+            
+                !!! abstract "0-2 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Saki x4 o Scylla/Haboela x4 en caso de contar con al menos 2 :material-star:
+
+            === "F2P"
+            
+                !!! abstract "0-3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Scylla.webp){ width="200" }|![Image title](/images/matrix/Scylla.webp){ width="200" }|
+                    |![Image title](/images/matrix/Scylla.webp){ width="200" }|![Image title](/images/matrix/Scylla.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Saki x4 o Haboela x4
+
+    !!! tip inline ""
+
+        <figure markdown>
+        <a href="/Simulacrums/Fiona/#arma">![Image title](/images/weapons/Moonstar_Bracelet.webp){ width="250" }</a>
+        </figure>
+
+        <font size="3">**Brazalete Lunaestrella**</font>(1)
+        { .annotate }
+
+        3. 
+            ### **Set de Matrices Recomendadas**
+
+            === "Ballena"
+    
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Fiona.webp){ width="200" }|![Image title](/images/matrix/Fiona.webp){ width="200" }|
+                    |![Image title](/images/matrix/Fiona.webp){ width="200" }|![Image title](/images/matrix/Fiona.webp){ width="200" }|
+
+            === "Delfin"
+            
+                !!! abstract "0-2 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Fiona.webp){ width="200" }|![Image title](/images/matrix/Fiona.webp){ width="200" }|
+                    |![Image title](/images/matrix/Fiona.webp){ width="200" }|![Image title](/images/matrix/Fiona.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Saki x4 o Scylla/Haboela x4
+
+            === "F2P"
+            
+                !!! abstract "0-3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|
+                    |![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Scylla x4 o Haboela x4
+
+### Triple Hielo
+
+!!! quote ""
+    !!! note inline ""
+        <figure markdown>
+        <a href="#arma">![Image title](/images/weapons/Alabaster_Tiger.webp){ width="250" }</a>
+        </figure>
+
+        <font size="3">**Tigre de Alabastro**</font>(1)
+        { .annotate }
+
+        1. 
+            ### **Set de Matrices Recomendadas**
+
+            === "Ballena"
+    
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Ling_Han.webp){ width="200" }|![Image title](/images/matrix/Ling_Han.webp){ width="200" }|
+                    |![Image title](/images/matrix/Ling_Han.webp){ width="200" }|![Image title](/images/matrix/Ling_Han.webp){ width="200" }|
+
+            === "Delfin"
+            
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Samir.webp){ width="200" }|![Image title](/images/matrix/Samir.webp){ width="200" }|
+                    |![Image title](/images/matrix/Scylla.webp){ width="200" }|![Image title](/images/matrix/Scylla.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        En caso de utilizar el set de 4 de Scylla en otra arma, sustituir por Shiro x2 o Crow x2
+
+            === "F2P"
+            
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Samir.webp){ width="200" }|![Image title](/images/matrix/Samir.webp){ width="200" }|
+                    |![Image title](/images/matrix/Shiro.webp){ width="200" }|![Image title](/images/matrix/Shiro.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        En caso de contar con 60% de critico o más, se puede sustituir el set de Shiro por Crow
+   
+    !!! note inline ""
+
+        <figure markdown>
+        <a href="/Simulacrums/Yu_Lan/#arma">![Image title](/images/weapons/Unity.webp){ width="250" }</a>
+        </figure>
+
+        <font size="3">**Unidad**</font>(1)
+        { .annotate }
+
+        2. 
+            ### **Set de Matrices Recomendadas**
+
+            === "Ballena"
+    
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+
+            === "Delfin"
+            
+                !!! abstract "0-2 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+                    |![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|![Image title](/images/matrix/Yu_Lan.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Saki x4 o Scylla/Haboela x4 en caso de contar con al menos 2 :material-star:
+
+            === "F2P"
+            
+                !!! abstract "0-3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Scylla.webp){ width="200" }|![Image title](/images/matrix/Scylla.webp){ width="200" }|
+                    |![Image title](/images/matrix/Scylla.webp){ width="200" }|![Image title](/images/matrix/Scylla.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Saki x4 o Haboela x4
+
+    !!! note inline ""
+
+        <figure markdown>
+        <a href="/Simulacrums/Icarus/#arma">![Image title](/images/weapons/Precious_One.webp){ width="250" }</a>
+        </figure>
+
+        <font size="3">**Preciosa**</font>(1)
+        { .annotate }
+
+        3. 
+            ### **Set de Matrices Recomendadas**
+
+            === "Ballena"
+    
+                !!! abstract "3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Icarus.webp){ width="200" }|![Image title](/images/matrix/Icarus.webp){ width="200" }|
+                    |![Image title](/images/matrix/Icarus.webp){ width="200" }|![Image title](/images/matrix/Icarus.webp){ width="200" }|
+
+            === "Delfin"
+            
+                !!! abstract "0-2 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Icarus.webp){ width="200" }|![Image title](/images/matrix/Icarus.webp){ width="200" }|
+                    |![Image title](/images/matrix/Icarus.webp){ width="200" }|![Image title](/images/matrix/Icarus.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Saki x4 o Scylla/Haboela x4
+
+            === "F2P"
+            
+                !!! abstract "0-3 :material-star:"
+                    |||
+                    | :------------------------------: |:-:|
+                    |![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|
+                    |![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|![Image title](/images/matrix/Saki_Fuwa.webp){ width="200" }|
+
+                    !!! note "Nota"
+                        Se puede sustituir por el set de Scylla x4 o Haboela x4
 
 ## **PV**
 
